# pet_mcu_common

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: pet_mcu_baseConfig.cmake  pet_mcu_commonConfig.cmake  setup_ros_lib.cmake
core/: CMakeLists.txt
core/include/: modules.h  rosserial_node.h
core/src/: rosserial_node.cpp
modules/engine_module/: CMakeLists.txt
modules/engine_module/include/: engine_module.h
modules/ir_remote_module/: CMakeLists.txt
modules/ir_remote_module/include/: ir_remote_module.h
modules/ir_remote_module/src/: ir_remote_module.cpp
modules/light_beacon_module/: CMakeLists.txt
modules/light_beacon_module/include/: light_beacon_module.h
modules/light_beacon_module/src/: light_beacon_module.cpp
modules/line_sensor_module/: CMakeLists.txt
modules/line_sensor_module/include/: line_sensor_module.h
modules/line_sensor_module/src/: line_sensor_module.cpp
modules/ultrasound_legacy_module/: CMakeLists.txt
modules/ultrasound_legacy_module/include/: ultrasound_legacy.h  ultrasound_legacy_module.h
modules/ultrasound_legacy_module/src/: ultrasound_legacy.cpp  ultrasound_legacy_module.cpp
modules/ultrasound_module/: CMakeLists.txt
modules/ultrasound_module/include/: ultrasound.h  ultrasound_module.h
modules/ultrasound_module/src/: ultrasound.cpp
pet_mk_iv_uno/: CMakeLists.txt
pet_mk_iv_uno/src/: modules.cpp
pico/: CMakeLists.txt  Dockerfile  README.md
pico/include/: pico_transport.h
pico/src/: main.c  main.cpp  pico_transport.c
pico/src/ultrasound_module/: CMakeLists.txt
pico/src/ultrasound_module/include/: ultrasound.h
pico/src/ultrasound_module/include/pico/: ultrasound.h  ultrasound.hpp  ultrasound_module.h  ultrasound_module.hpp  ultrasound_publisher.hpp
pico/src/ultrasound_module/src/: ultrasound.cpp  ultrasound_module.cpp  ultrasound_publisher.cpp
